# app/Models/RekeningAdmin.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class RekeningAdmin extends Model
+{
+    use HasFactory;
+
+    protected $guarded = [];
+
+}
