# app/Models/TransaksiRequest.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class TransaksiRequest extends Model
+{
+    use HasFactory;
+
+    protected $guarded = [];
+
+    public function user()
+    {
+        return $this->hasOne(User::class, 'id', 'user_id');
+    }
+
+    public function transfer()
+    {
+        return $this->hasOne(TransaksiTransfer::class, 'transaksi_request_id', 'id');
+    }
+
+}
